2003-04-04  John Levon  <levon@movementarian.org>

	* panelstack.C: hide the pointless header

2003-04-04  John Levon  <levon@movementarian.org>

	* QCitation.C:
	* QCitationDialog.C:
	* QCitationDialogBase.ui: some UI fixes, remove
	text before, add accelerators
	
2003-04-03  John Levon  <levon@movementarian.org>

	* QRefDialog.h:
	* QRefDialog.C: set focus on the refs list. Don't
	use "Goto" jargon. Add some accelerators. Make return/click
	on a reference close the dialog. Don't use obsolete inSort()

2003-04-01  John Levon  <levon@movementarian.org>

	* QtView.C:
	* Toolbar_pimpl.C: ToolbarDefaults got renamed,
	handle no toolbar

2003-03-31  John Levon  <levon@movementarian.org>

	* lyx_gui.C: return useful default font names, add use_gui

	* QPrefs.C: remove some dead font code

	* qfont_loader.C: use_gui moved.
	* qfont_metrics.C: use_gui moved.

2003-03-31  John Levon  <levon@movementarian.org>

	* Alert_pimpl.C: remove alert()

2003-03-29  John Levon  <levon@movementarian.org>

	* QBrowseBox.C: handle transparent pixmaps

2003-03-29  John Levon  <levon@movementarian.org>

	* QBrowseBox.h:
	* QBrowseBox.C: fix bug 908

2003-03-29  John Levon  <levon@movementarian.org>

	* ui/BulletsModuleBase.ui: final tweaks

2003-03-29  John Levon  <levon@movementarian.org>

	* Alert_pimpl.C: implement warning(), information(), error()

2003-03-29  John Levon  <levon@movementarian.org>

	* Alert_pimpl.C: implement prompt()

2003-03-29  John Levon  <levon@movementarian.org>

	* QDocument.C:
	* QDocumentDialog.C:
	* QDocumentDialog.h:
	* ui/NumberingModuleBase.ui: feedback for numbering

	* ui/TextLayoutModuleBase.ui: relayout

2003-03-29  John Levon  <levon@movementarian.org>

	* BulletsModule.h:
	* BulletsModule.C:
	* QDocumentDialog.C:
	* ui/BulletsModuleBase.ui: completely rework the
	bullets panel

2003-03-28  John Levon  <levon@movementarian.org>

	* ui/QDocumentDialogBase.ui: small tweak

2003-03-28  John Levon  <levon@movementarian.org>

	* QPrefs.C: